--- a/style.css
+++ b/style.css
@@ -42,10 +42,10 @@ section {
 }
 
 #portait {
-  aspect-ratio: 1/1;
+  aspect-ratio: 9/12;
   object-fit: cover;
-  height: 250px;
-  width: 250px;
+  height: min(300px, 40vh);
+  width: auto;
   margin: 20px auto;
 }
 
@@ -65,6 +65,7 @@ h3 {
 }
 h1 {
   text-transform: uppercase;
+  font-size: min(6vw, 2rem);
 }
 h2 {
   border-bottom: var(--divider);
@@ -96,7 +97,7 @@ footer {
 a {
   text-decoration: none;
   color: var(--secondaryColor);
-  font-style: italic;
+  /* font-style: italic; */
 }
 
 .highlight {
@@ -153,4 +154,10 @@ li {
   display: grid;
   margin: 10px auto;
   width: fit-content;
+}
+
+@media (min-width: 600px) {
+  section {
+    display: flex;
+  }
 }
