--- a/layout.css
+++ b/layout.css
@@ -17,3 +17,14 @@
 .col {
   margin-bottom: 20px;
 }
+#whyMe .col {
+  &:first-child {
+    grid-column: 1/3;
+  }
+  &:nth-child(2) {
+    grid-column: 1/2;
+  }
+  &:nth-child(3) {
+    grid-column: 2/3;
+  }
+}
