--- a/animations.css
+++ b/animations.css
@@ -23,6 +23,11 @@
   right: 20px;
   border: none;
   cursor: pointer;
+  transition: 0.4s;
+}
+#themeSwitcher:hover {
+  background-color: var(--secondaryColor);
+  transition: 0.4s;
 }
 
 #moonIcon {
