--- a/animations.css
+++ b/animations.css
@@ -1,12 +1,19 @@
 /* --- Theme Switcher --- */
 .darkmode {
   --primaryColor: #a8fae0;
-  --secondaryColor: #942c4f;
-  --darkColor: #ffffff;
-  --backgroudColor: #151933;
-  --secondaryBackgroundColor: #942c4f;
-  --divider: var(--darkColor) 1px solid;
+  --secondaryColor: #fe558e;
+  --darkColor: #333;
+  --lightColor: #ffffff;
+
+  --textColor: var(--lightColor);
+  --linkColor: var(--lightColor);
+
+  --backgroudColor: var(--darkColor);
+  --secondaryBackgroundColor: var(--secondaryColor);
   --hightlightColor: var(--primaryColor);
+
+  --divider: var(--lightColor) 1px solid;
+  --dottedDivider: var(--lightColor) 1px dotted;
 }
 
 #themeSwitcher {
