--- a/layout.css
+++ b/layout.css
@@ -17,15 +17,13 @@
 .col {
   margin-bottom: 20px;
 }
-#whyMe .col {
-  &:first-child {
-    grid-column: 1/3;
-  }
-  &:nth-child(2) {
-    grid-column: 1/2;
-    padding: 10px;
-  }
-  &:nth-child(3) {
-    grid-column: 2/3;
-  }
+#whyMe .col:first-child {
+  grid-column: 1/3;
+}
+#whyMe .col:nth-child(2) {
+  grid-column: 1/2;
+  padding: 10px;
+}
+#whyMe .col:nth-child(3) {
+  grid-column: 2/3;
 }
