--- a/layout.css
+++ b/layout.css
@@ -12,18 +12,25 @@
   .grid1-1-1 h3 {
     margin: auto 0;
   }
+  #whyMe .col:first-child {
+    grid-column: 1/3;
+  }
+  #whyMe .col:nth-child(2) {
+    grid-column: 2/3;
+    padding: 10px;
+  }
+  #whyMe .col:nth-child(3) {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+}
+
+.grid1-1,
+.grid1-1-1 {
+  display: grid;
+  gap: 20px;
 }
 
 .col {
   margin-bottom: 20px;
-}
-#whyMe .col:first-child {
-  grid-column: 1/3;
-}
-#whyMe .col:nth-child(2) {
-  grid-column: 1/2;
-  padding: 10px;
-}
-#whyMe .col:nth-child(3) {
-  grid-column: 2/3;
 }
