--- a/style.css
+++ b/style.css
@@ -14,35 +14,69 @@ img {
 
 /* global const */
 :root {
-  --primaryColor: #fe558e;
-  --secondaryColor: #a8fae0;
+  --primaryColor: #4060ff;
+  --secondaryColor: var(--primaryColor);
   --darkColor: #333;
-  --lightColor: #ffffff;
+  --lightColor: #f9f8ff;
 
   --textColor: var(--darkColor);
   --linkColor: var(--primaryColor);
 
-  --backgroudColor: var(--lightColor);
+  --backgroundColor: var(--lightColor);
   --secondaryBackgroundColor: var(--secondaryColor);
   --hightlightColor: var(--primaryColor);
 
   --divider: var(--darkColor) 1px solid;
   --dottedDivider: var(--darkColor) 1px dotted;
+  --border-radius: 5px;
 
   cursor: default;
   scroll-behavior: smooth;
 }
 
+mark {
+  background-color: var(--primaryColor);
+  font-weight: bold;
+}
 /*  --- General --- */
+
+body {
+  --side-space: clamp(1.2rem, 7vw, 3.5rem);
+  --wide: minmax(var(--side-space), 1fr);
+  --main: min(1200px, calc(100% - var(--side-space) * 2));
+  --highlight: minmax(0, 7.5rem);
+  display: grid;
+  grid-template-columns:
+    [edge-start] var(--wide)
+    [breakout-start] var(--highlight)
+    [main-start] var(--main) [main-end]
+    var(--highlight) [breakout-end]
+    var(--wide) [edge-end];
+  gap: 1.5rem 0;
+}
+main {
+  grid-column: main;
+}
+header {
+  grid-column: edge;
+}
+
+footer {
+  grid-column: edge;
+}
+
+.content {
+  display: subgrid;
+  grid-column: main;
+}
 body {
   transition: background-color 0.4s, color 0.4s;
-  background-color: var(--backgroudColor);
+  background-color: var(--backgroundColor);
   color: var(--darkColor);
   font-family: Arial, Helvetica, sans-serif;
-  height: 100vh;
 }
 section {
-  padding: 10px 15px;
+  padding: 10px 0;
 }
 .maxWidth {
   max-width: 1350px;
@@ -57,26 +91,29 @@ h3 {
   text-transform: capitalize;
   padding-bottom: 0.5rem;
   font-family: "SUSE mono", sans-serif;
+  font-style: normal;
 }
 h1 {
-  text-transform: uppercase;
-  font-size: max(24px, 2vw);
+  font-size: 3rem;
+  font-weight: 400;
+  line-height: normal;
 }
 h2 {
-  border-bottom: var(--divider);
-  margin-top: 30px;
-  margin-bottom: 10px;
-  font-size: max(18px, 1.3vw);
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: normal;
+  font-size: max(18px, 1.3cqw);
 }
 
 h3 {
+  font-weight: 400;
   margin-top: 15px;
-  font-size: max(15px, 1.2vw);
+  font-size: max(15px, 1.2cqw);
 }
 
 p {
   color: var(--textColor);
-  font-size: max(13px, 1vw);
+  font-size: max(13px, 1cqw);
   margin-top: 10px;
   margin-left: 10px;
 }
@@ -87,7 +124,7 @@ li {
   list-style-type: none;
   margin-left: 20px;
   text-transform: capitalize;
-  font-size: max(12px, 1vw);
+  font-size: max(12px, 1cqw);
 }
 
 a {
@@ -104,28 +141,39 @@ a:hover {
 /* header */
 
 header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 50px;
-  border-bottom: var(--divider);
-  padding: 0 15px;
-}
-
-header h1 {
-  text-transform: uppercase;
-  padding: 1rem;
-  font-size: 1rem;
-}
-header a {
-  text-decoration: none;
+  display: inline-flex;
+  padding: 0.625rem 1.25rem;
+  justify-content: center;
+  align-content: center;
+  align-items: flex-start;
+  gap: 1.5625rem;
+  h1 {
+    color: #000;
+    font-family: "SUSE Mono";
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+  a {
+    text-decoration: none;
+  }
+  a:hover {
+    text-decoration: none;
+  }
+  svg {
+    fill: #4060ff;
+  }
 }
 
 /* footer */
 footer {
-  border-top: var(--divider);
   padding: 15px;
   gap: 15px;
+  background-color: var(--primaryColor);
+}
+footer * {
+  color: var(--lightColor);
 }
 footer a,
 footer p,
@@ -134,46 +182,69 @@ footer li {
 }
 
 /* introduction */
-#portait {
-  aspect-ratio: 9/12;
-  object-fit: cover;
-  height: 30vw;
-  width: auto;
-  margin: 20px auto;
-  min-height: 250px;
-  border-radius: 5px;
-}
-.tagline {
-  font-style: italic;
-  margin-bottom: 10px;
-  color: var(--hightlightColor);
-  font-family: "SUSE mono", sans-serif;
-  font-size: max(18px, 1.3vw);
-}
-#intro a {
-  font-size: max(18px, 1.3vw);
-  font-weight: bold;
-  color: var(--backgroudColor);
-  background-color: var(--primaryColor);
-  padding: 5px 10px;
-  border-radius: 5px;
-  text-transform: uppercase;
-  font-family: "SUSE mono", sans-serif;
-  font-style: normal;
-  display: grid;
-  width: fit-content;
-  margin: 20px auto;
-}
-#intro a:hover {
-  background-color: var(--secondaryColor);
-  transition: 0.4s;
-  text-decoration: none;
+
+#intro {
+  img {
+    aspect-ratio: 9/12;
+    object-fit: cover;
+    height: 30cqw;
+    width: auto;
+    margin: 20px auto;
+    min-height: 250px;
+    border-radius: var(--border-radius);
+  }
+  a {
+    color: #fff;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    display: flex;
+    padding: 10px 15px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 74px;
+    border-radius: 68px;
+    background: #4060ff;
+    text-decoration: none;
+  }
+  a:hover {
+    background-color: var(--secondaryColor);
+    transition: 0.4s;
+    text-decoration: none;
+  }
+  .tagline {
+    font-style: italic;
+    margin-bottom: 10px;
+    color: var(--hightlightColor);
+    font-family: "SUSE mono", sans-serif;
+    font-size: max(18px, 1.3cqw);
+  }
+  .btn {
+    margin: 2cqh 0;
+    display: flex;
+    align-items: flex-start;
+    gap: 18px;
+  }
 }
 
 /* about me */
 .funFacts {
-  background-color: var(--backgroudColor);
-  padding: 10px;
+  background-color: var(--primaryColor);
+  padding: 25px;
+  border-radius: var(--border-radius);
+  height: fit-content;
+
+  h3,
+  p {
+    color: var(--lightColor);
+  }
+  h3 {
+    margin: 0;
+  }
 }
 
 /* skills */
@@ -196,11 +267,24 @@ footer li {
   margin: 20px 0;
 }
 
+.projectCard {
+  display: flex;
+  width: 363px;
+  padding: 20px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  flex-shrink: 0;
+  border-radius: 12px;
+  background: #fff;
+  height: fit-content;
+  *:hover {
+    color: var(--primaryColor);
+  }
+}
+
 /* computer view */
 @media (min-width: 600px) {
-  section {
-    display: flex;
-  }
   #portait {
     min-height: 300px;
   }
@@ -209,14 +293,11 @@ footer li {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    height: 11vh;
   }
   footer ul {
     display: contents;
   }
-  header {
-    height: 11vh;
-  }
+
   footer a,
   footer p {
     margin-top: 10px;
