--- a/stylesheets/darkmode.css
+++ b/stylesheets/darkmode.css
@@ -13,7 +13,6 @@
   --hightlightColor: var(--primaryColor);
 
   --divider: var(--lightColor) 1px solid;
-  --dottedDivider: var(--lightColor) 1px dotted;
 }
 
 #themeSwitcher {
@@ -48,4 +47,23 @@ body.darkmode #moonIcon {
 }
 body.darkmode #sunIcon {
   display: inline;
+}
+
+.projectCard {
+  display: flex;
+  width: 363px;
+  padding: 20px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  flex-shrink: 0;
+  border-radius: 12px;
+  background: #fff;
+  height: fit-content;
+  * {
+    color: var(--darkColor);
+  }
+  *:hover {
+    color: var(--primaryColor);
+  }
 }
