--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -1,27 +1,25 @@
 @media (min-width: 600px) {
   .grid1-1 {
-    display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 20px;
   }
   .grid1-1-1 {
-    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 20px;
   }
   .grid1-1-1 h3 {
     margin: auto 0;
   }
-  #whyMe .col:first-child {
-    grid-column: 1/3;
-  }
-  #whyMe .col:nth-child(2) {
-    grid-column: 2/3;
-    padding: 10px;
-  }
-  #whyMe .col:nth-child(3) {
-    grid-column: 1/2;
-    grid-row: 2/3;
+  #whyMe {
+    & .col:first-child {
+      grid-column: 1 / 3;
+    }
+    & .col:nth-child(2) {
+      grid-column: 2 / 3;
+      padding: 10px;
+    }
+    & .col:nth-child(3) {
+      grid-column: 1 / 2;
+      grid-row: 2 / 3;
+    }
   }
 }
 
