--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -15,6 +15,8 @@ img {
 /* global const */
 :root {
   --primaryColor: #4060ff;
+  --primaryColor-hover: #2740bd;
+
   --secondaryColor: var(--primaryColor);
   --darkColor: #333;
   --lightColor: #f9f8ff;
@@ -27,48 +29,15 @@ img {
   --hightlightColor: var(--primaryColor);
 
   --divider: var(--darkColor) 1px solid;
-  --dottedDivider: var(--darkColor) 1px dotted;
+  /* --dottedDivider: var(--darkColor) 1px dotted; */
   --border-radius: 5px;
 
   cursor: default;
   scroll-behavior: smooth;
 }
 
-mark {
-  background-color: var(--primaryColor);
-  font-weight: bold;
-}
 /*  --- General --- */
 
-body {
-  --side-space: clamp(1.2rem, 7vw, 3.5rem);
-  --wide: minmax(var(--side-space), 1fr);
-  --main: min(1200px, calc(100% - var(--side-space) * 2));
-  --highlight: minmax(0, 7.5rem);
-  display: grid;
-  grid-template-columns:
-    [edge-start] var(--wide)
-    [breakout-start] var(--highlight)
-    [main-start] var(--main) [main-end]
-    var(--highlight) [breakout-end]
-    var(--wide) [edge-end];
-  gap: 1.5rem 0;
-}
-main {
-  grid-column: main;
-}
-header {
-  grid-column: edge;
-}
-
-footer {
-  grid-column: edge;
-}
-
-.content {
-  display: subgrid;
-  grid-column: main;
-}
 body {
   transition: background-color 0.4s, color 0.4s;
   background-color: var(--backgroundColor);
@@ -76,13 +45,14 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 section {
-  padding: 10px 0;
-}
-.maxWidth {
-  max-width: 1350px;
-  margin: auto;
+  padding: 40px 0;
 }
 
+.innerContent {
+  max-width: 1000px;
+  margin: auto;
+  padding: 0 15px;
+}
 /*  Headers  */
 h1,
 h2,
@@ -147,6 +117,11 @@ header {
   align-content: center;
   align-items: flex-start;
   gap: 1.5625rem;
+  position: sticky;
+  top: 0;
+  width: 100%;
+  background-color: var(--backgroundColor);
+
   h1 {
     color: #000;
     font-family: "SUSE Mono";
@@ -157,9 +132,9 @@ header {
   }
   a {
     text-decoration: none;
-  }
-  a:hover {
-    text-decoration: none;
+    :hover {
+      text-decoration: none;
+    }
   }
   svg {
     fill: #4060ff;
@@ -182,7 +157,6 @@ footer li {
 }
 
 /* introduction */
-
 #intro {
   img {
     aspect-ratio: 9/12;
@@ -195,25 +169,16 @@ footer li {
   }
   a {
     color: #fff;
-    text-align: center;
     font-family: Inter;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    display: flex;
     padding: 10px 15px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 74px;
     border-radius: 68px;
     background: #4060ff;
     text-decoration: none;
+    transition: 0.4s;
   }
   a:hover {
-    background-color: var(--secondaryColor);
-    transition: 0.4s;
+    background-color: var(--primaryColor-hover);
+    padding: 10px 20px;
     text-decoration: none;
   }
   .tagline {
@@ -251,20 +216,28 @@ footer li {
 #skills p {
   margin: 10px 0 25px 0;
 }
+#skills {
+  background-color: hsla(240, 15%, 39%, 0.199);
+}
 
 /* projects */
+
+#projects article {
+  overflow-x: auto;
+  width: 100%;
+}
+
 #projects ul {
+  display: flex;
+  gap: 20px;
   margin: auto 0;
-}
+  width: max-content;
 
-/* formatting */
-.colorHighlight {
-  color: var(--hightlightColor);
-}
-
-.partialDivider {
-  border-bottom: var(--dottedDivider);
-  margin: 20px 0;
+  li {
+    * {
+      margin: 0;
+    }
+  }
 }
 
 .projectCard {
@@ -278,9 +251,20 @@ footer li {
   border-radius: 12px;
   background: #fff;
   height: fit-content;
+
   *:hover {
     color: var(--primaryColor);
   }
+}
+
+/* formatting */
+.colorHighlight {
+  color: var(--hightlightColor);
+}
+
+.partialDivider {
+  border-bottom: var(--dottedDivider);
+  margin: 20px 0;
 }
 
 /* computer view */
