--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -123,7 +123,7 @@ header {
 
   h1 {
     color: var(--textColor);
-    font-family: "SUSE Mono";
+    font-family: "SUSE Mono", sans-serif;
     font-size: 1.25rem;
     font-style: normal;
     font-weight: 400;
@@ -166,7 +166,7 @@ footer {
   }
   a {
     color: #fff;
-    font-family: Inter;
+    font-family: "Inter", sans-serif;
     padding: 10px 15px;
     border-radius: 68px;
     background: var(--primaryColor);
